esimene git versioon
see on  ingi 4. katse, hope this works

--- a/2_update website/update website.html
+++ b/2_update website/update website.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>1466 to html</title>
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>  
 </head>
@@ -10,33 +11,40 @@
 </style>
 
 <body>
+    <!--pealkiri-->
     <header>1644 UPDATE</header>
+    <div id="line1"></div>
+    <div id="line2"></div>  
+    <div id="line3"></div>
 
     <section>
-
         <!----ESIMENE KAST---->
-        <div class="item-1">
-            <p class="pealkiri">VIS Lahendus:</p>
-            <div class="vis-punane">
-                <p class="punase-text">Uus lehekülje kaanekujundus</p>
-                <p class="punase-text">Erinevad Lehekülgede katekooriad</p>
-                <p class="punase-text">ROUNDED CORNERS finally</p>
-            </div>
-            <div class="teine_osa">
-                <p>Originaalsed leheküljed säilivad!!</p>
-                <p>Nublu Refrencid</p>
-            </div>
+        <div class="items">
+            <img src="vis lahendus.png" alt="visuaalne lahendus" class="image">
         </div>
-
         <!----TEINE KAST---->
-        <div class="item-2">
+        <div class="items">
+            <img src="Tehniline lahendus.png" alt="tehniline lahendus" class="image">
         </div>
-        
         <!----KOLMAS KAST---->
-        <div class="item-3">
+        <div class="items">
+            <div class="up">
+                <p>letsgo</p>
+            </div>
+            <div class="down">
+                <p>letsgo2</p>
+            </div>
         </div>
-
     </section>
+
+    <div class="genres">
+        <div style="display:inline-block;color:orange;">
+            genres:
+        </div> 
+        <b>DRAMA COMEDY ACTION HORROR WESTERN THRILLER</b>                
+    </div>
+
+
 
 </body>
 
