--- a/2_update website/update website.html
+++ b/2_update website/update website.html
@@ -6,7 +6,6 @@
     <title>1466 to html</title>
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>  
 </head>
-
 <style>
 </style>
 
@@ -16,7 +15,6 @@
     <div id="line1"></div>
     <div id="line2"></div>  
     <div id="line3"></div>
-
     <section>
         <!----ESIMENE KAST---->
         <div class="items">
@@ -36,17 +34,13 @@
             </div>
         </div>
     </section>
-
     <div class="genres">
         <div style="display:inline-block;color:orange;">
             genres:
         </div> 
-        <b>DRAMA COMEDY ACTION HORROR WESTERN THRILLER</b>                
+        <b>DRAMA COMEDY ACTION HORROR WESTERN THRILLER</b>
+        <!----githubi test---->                
     </div>
-
-
-
 </body>
-
 </html>
 
