--- a/2_update website/update website.html
+++ b/2_update website/update website.html
@@ -10,6 +10,7 @@
 </style>
 
 <body>
+    <a id="hidden-button" href="secondpage.html">Touch me if U dare</a>
     <!--pealkiri-->
     <header>1644 UPDATE</header>
     <div id="line1"></div>
@@ -55,10 +56,12 @@
           var identity = setInterval(scene, 100); 
           function scene() { 
             if (width >= 100) { 
-              clearInterval(identity); 
-            } else { 
-              width++;  
-              element.style.width = width + '%';  
+                clearInterval(identity);  
+                document.getElementById('hidden-button').style=transform = translateY(0%);
+            } 
+            else { 
+                width++;  
+                element.style.width = width + '%';  
             } 
           } 
         } 
