download nupp toob ka soome lingi esile

--- a/2_update website/update website.html
+++ b/2_update website/update website.html
@@ -58,7 +58,7 @@
           function scene() { 
             if (width >= 100) { 
                 clearInterval(identity); 
-                hidden.style.transform = translateY("0%");
+                hidden.style.transform = "translateY(0%)";
             } 
             else { 
                 width++;  
