coverart on ka uleval, aga see katki

--- a/2_update website/update website.html
+++ b/2_update website/update website.html
@@ -10,7 +10,14 @@
 </style>
 
 <body>
-    <a id="hidden-button" href="secondpage.html">Touch me if U dare</a>
+    <div id="hidden-button">
+        <div class="coverart">
+            <img src="Soome1 coverart.webp" alt="Soome1 coverart">
+        </div>
+        <div class="cover-text">
+            <a href="https://youtu.be/mQ2tzJATnyY">lil mäll x lil allar - SOOME1</a>
+        </div>
+    </div>
     <!--pealkiri-->
     <header>1644 UPDATE</header>
     <div id="line1"></div>
