--- a/update website.html
+++ b/update website.html
@@ -10,15 +10,17 @@
 </style>
 
 <body>
-    <div id="hidden-button">
-        <div class="vasak">
-            <img src="Soome1 coverart.webp" alt="Soome1 coverart" class="cover-picture">
-        </div>
-        <div class="parem">
-            <a class="cover-text" style="font-size: 3rem; font-weight: 700;" href="https://youtu.be/mQ2tzJATnyY">lil mäll x lil allar - SOOME1</a>
-            <p class="cover-text">TÄNAME: B-roll ja muidu ka muhe seltskond: Aron Kelder (aka motika tüüp), Helen Jakob (aka koerte omnik), Joonas Adami (aka karvane), Marten Käis Soome1 filmimas, Märt Chad Veri, Pauli i ne Ainso, Kerti Kala (roosade juustega)</p>
-        </div>
-    </div>
+    <section>
+        <div id="hidden-button">
+            <div class="vasak">
+                <img src="Soome1 coverart.webp" alt="Soome1 coverart" class="cover-picture">
+            </div>
+            <div class="parem">
+                <a class="cover-text" style="font-size: 3rem; font-weight: 700;" href="https://youtu.be/mQ2tzJATnyY">lil mäll x lil allar - SOOME1</a>
+                <p class="cover-text">TÄNAME: B-roll ja muidu ka muhe seltskond: Aron Kelder (aka motika tüüp), Helen Jakob (aka koerte omnik), Joonas Adami (aka karvane), Marten Käis Soome1 filmimas, Märt Chad Veri, Pauli i ne Ainso, Kerti Kala (roosade juustega)</p>
+            </div>
+        </div>        
+    </section>
     <!--pealkiri-->
     <header>1644 UPDATE</header>
     <div id="line1"></div>
@@ -37,10 +39,8 @@
         </div>
         <!----KOLMAS KAST---->
         <div class="items">
-            <div class="kolmas">
-                <img src="up.png" alt="tehniline lahendus" class="image">
-                <img src="down.png" alt="tehniline lahendus" class="image" class="down">
-            </div>
+            <img src="up.png" alt="tehniline lahendus" class="image">
+            <img src="down.png" alt="tehniline lahendus" class="image" id="down">
         </div>
     </section>
     <!--genres-->
@@ -77,13 +77,6 @@
           } 
         } 
     </script>
-    <br>
-    <div class="kast">
-        <p>PRO TIP</p>
-        <p>Ära hakka koodima</p>
-        <br>
-        <p>Vb teen ka mobile site</p>
-    </div>
 
 </body>
 </html>
