dav vist valmis

--- a/update website.html
+++ b/update website.html
@@ -10,7 +10,7 @@
 </style>
 
 <body>
-    <section>
+    <section style="position: absolute; width: min(90%, 1500px);">
         <div id="hidden-button">
             <div class="vasak">
                 <img src="Soome1 coverart.webp" alt="Soome1 coverart" class="cover-picture">
@@ -68,7 +68,7 @@
           function scene() { 
             if (width >= 100) { 
                 clearInterval(identity); 
-                hidden.style.transform = "translateY(5%)";
+                hidden.style.transform = "translateY(-20%)";
             } 
             else { 
                 width++;  
