--- a/lits.html
+++ b/lits.html
@@ -3,7 +3,16 @@
   <head>
     <title>Roulette Wheel</title>
     <style>
-        body {background: black;}
+        body {
+    background: url("updatebackround1.png");
+    position: flex;
+    height: 100%;
+    background-color: #141411;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #ffffff;
+    width: min(90%, 1500px);
+    margin: auto;
+}
     </style>
   </head>
   <body>
