--- a/teretulemast/teretulemast.html
+++ b/teretulemast/teretulemast.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
+  <meta charset="UTF-8">
   <title>1466 to html</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="teretulemast.css">
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
+  <link rel="stylesheet" type="css" href="../style.css">
 </head>
 <style>
 
@@ -16,6 +19,10 @@
     <div id="asidebox">
       <p id="pealkiri" class="flex">1466</p>
     </div>
+    <a id="yt-link" class="meta-link" href="./futur/futur.html" target="_blank">
+      <i class="fa-brands fa-youtube"></i>
+      <span>menüü</span>
+    </a>
   </aside>
     
   <section id="divtop">
@@ -28,12 +35,13 @@
   <section id="divbottom">
     <div id="bottombox">
       <article id="bottomtitle">OMG pede hakka toole</article>
+      <article id="maintextAll">Kiire update, see sitt ikka veel ei töööötaaaaa 🖕</article>
     </div>
   </section>
 
-  <footer id="cookiebanner">
-    <p>Accept cookies plz</p>
-  </footer>
+<!-- see link -->
+
+
 
 </div>
 
