--- a/followcursor/FollowCursor.html
+++ b/followcursor/FollowCursor.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>cursor follow</title>
+  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="./FollowCursor.css">
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-  <style>
-    canvas {}
-  </style>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script src="./FollowCursor.js"></script>
 </head>
@@ -19,5 +17,12 @@
     <p id="demo"></p>
   </div>
   <canvas></canvas>
+
+  <a id="yt-link" class="meta-link" 
+  href="../futur/futur.html" target="_blank">
+    <i class="fa-brands fa-youtube"></i>
+    <span>menüü</span>
+  </a>
+
 </body>
 </html>
