--- a/update lehekülg/update website.html
+++ b/update lehekülg/update website.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>1466 to html</title>
     <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>  
+    <link rel="stylesheet" href="./style.css">
 </head>
 <style>
 </style>
@@ -51,7 +52,7 @@
         <b>DRAMA COMEDY ACTION HORROR WESTERN THRILLER</b>        
     </div>
     <br>
-    <!--progress-->
+<!--progress-->
     <div id="Progress_Status"> 
         <div id="myprogressBar" style="width: 0%;"></div>
     </div>
@@ -59,6 +60,13 @@
     <div style="text-align: center;">
         <button onclick="update()" class="download">DOWNLOAD</button>
     </div>
+    <link rel="stylesheet" href="./style.css">
+<!-- see link -->
+    <a id="yt-link" class="meta-link" href="./futur/futur.html" target="_blank">
+        <i class="fa-brands fa-youtube"></i>
+        <span>menüü</span>
+    </a>
+
     <br>
     <br>
     <script> 
