--- a/futur/futur.html
+++ b/futur/futur.html
@@ -13,6 +13,7 @@
 <!-- partial:index.partial.html -->
 <a class="text1" href="/followcursor/FollowCursor.html" data-value="AVALEHELE">AVALEHELE</a>
 <a class="tekst2" href="/rulettewheel/rulette.html" data-value="SU EMA">EMPIRE RULETT</a>
+<a class="tekst2" href="/teretulemast/teretulemast.html" data-value="SU EMA">VANA TERVITUS</a>
 
 <h1 data-value="" class="videod">VIDEOD</h1>
 
