--- a/teretulemast/teretulemast.html
+++ b/teretulemast/teretulemast.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  
+<html lang="en">  
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <title>1466 to html</title>
   <link rel="stylesheet" href="teretulemast.css">
   <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
-  <link rel="stylesheet" type="css" href="../style.css">
 </head>
 <style>
 
@@ -19,10 +18,7 @@
     <div id="asidebox">
       <p id="pealkiri" class="flex">1466</p>
     </div>
-    <a id="yt-link" class="meta-link" href="./futur/futur.html" target="_blank">
-      <i class="fa-brands fa-youtube"></i>
-      <span>menüü</span>
-    </a>
+
   </aside>
     
   <section id="divtop">
@@ -40,7 +36,10 @@
   </section>
 
 <!-- see link -->
-
+<a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\rulettewheel\rulette.html" target="_blank">
+  <i class="fa-brands fa-youtube"></i>
+  <span>2 min tutorial</span>
+</a>
 
 
 </div>
