see kv lõpuni countdown demo

--- a/futur/futur.html
+++ b/futur/futur.html
@@ -18,17 +18,18 @@
   <br>
   <a class="link" href="/teretulemast/teretulemast.html" data-value="VANA TERVITUS">VANA TERVITUS</a>
 </div>
+
 <!-- <h1 data-value="" class="videod">VIDEOD</h1>-->
 
 <!-- <a id="source-link" class="meta-link" href="https://kprverse.com" target="_blank">
   <i class="fa-solid fa-link"></i>
   <span>Source</span>
-</a>
+</a> -->
 
-<a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\rulettewheel\rulette.html" target="_blank">
+<a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\paevik\paevik.html" target="_blank">
   <i class="fa-brands fa-youtube"></i>
   <span>2 min tutorial</span>
-</a> -->
+</a>
 
 
 <!-- partial -->
