--- a/KV lopuni/lopuni.html
+++ b/KV lopuni/lopuni.html
@@ -12,6 +12,11 @@
 <body>
 <!-- partial:index.partial.html -->
 <div>
+    <div>
+      <p>Laeb..</p>
+      <div class="laadimine"></div>
+      <div class="progress"></div>
+    </div>
     <h1 class="kvlopuni" href="/followcursor/FollowCursor.html" data-value="Kaitseväe ajateenistuse lõpuni">Kaitseväe ajateenistuse lõpuni</p>
 </div>
 
