countdown ja precentage status toimivad

--- a/KV lopuni/lopuni.html
+++ b/KV lopuni/lopuni.html
@@ -8,16 +8,28 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Rubik:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./lopuni.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div>
-    <div>
-      <p>Laeb..</p>
-      <div class="laadimine"></div>
-      <div class="progress"></div>
-    </div>
-    <h1 class="kvlopuni" href="/followcursor/FollowCursor.html" data-value="Kaitseväe ajateenistuse lõpuni">Kaitseväe ajateenistuse lõpuni</p>
+
+<div class="centre_shit">
+  <!-- L A A D I M I N E -->
+  <div id="laadimine"> 
+    <p>Laeb..</p>
+    <div class="bar"></div>
+  </div>
+  <!-- L A E T U D -->
+  <div id="laetud"> 
+    <h1 class="kvlopuni" data-value="reservini jäänud">
+      reservini jäänud</h1>
+    <p id="aega"></p>
+  </div>
+  <br>
+  <div id="laetud">
+    <h1 class="tehtud" data-value="teenistuusest läbitud">
+      teenistuusest läbitud</h1>
+    <p id="protsente"></p>
+  </div>
 </div>
 
 <!-- partial -->
