reservi countdown done

--- a/KV lopuni/lopuni.html
+++ b/KV lopuni/lopuni.html
@@ -24,10 +24,10 @@
       reservini jäänud</h1>
     <p id="aega"></p>
   </div>
-  <br>
+  <br style="height: 20px;">
   <div id="laetud">
-    <h1 class="tehtud" data-value="teenistuusest läbitud">
-      teenistuusest läbitud</h1>
+    <h1 class="tehtud" data-value="teenistusest läbitud">
+      teenistusest läbitud</h1>
     <p id="protsente"></p>
   </div>
 </div>
