--- a/futur/futur.html
+++ b/futur/futur.html
@@ -12,11 +12,14 @@
 <body>
 <!-- partial:index.partial.html -->
 <div>
-  <a class="link" href="/followcursor/FollowCursor.html" data-value="AVALEHELE">AVALEHELE</a>
+  <a class="link" href="/followcursor/FollowCursor.html" 
+    data-value="AVALEHELE">AVALEHELE</a>
   <br>
-  <a class="link" href="/rulettewheel/rulette.html" data-value="EMPIRE RULETT">EMPIRE RULETT</a>
+  <a class="link" href="/rulettewheel/rulette.html" 
+    data-value="EMPIRE RULETT">EMPIRE RULETT</a>
   <br>
-  <a class="link" href="/teretulemast/teretulemast.html" data-value="VANA TERVITUS">VANA TERVITUS</a>
+  <a class="link" href="/reservini/reservini.html" 
+    data-value="RESERVINI">RESERVINI</a>
 </div>
 
 <!-- <h1 data-value="" class="videod">VIDEOD</h1>-->
