--- a/reservini/reservini.html
+++ b/reservini/reservini.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=Rubik:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./lopuni.css">
+  <link rel="stylesheet" href="./reservini.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -25,15 +25,14 @@
     <p id="aega"></p>
   </div>
   <br style="height: 20px;">
-  <div id="laetud">
-    <h1 class="tehtud" data-value="teenistusest läbitud">
-      teenistusest läbitud</h1>
+  <div id="laetud" class="prosa">
+    <h1 class="tehtud" data-value="teenistusest läbitud">teenistusest läbitud</h1>
     <p id="protsente"></p>
   </div>
 </div>
 
 <!-- partial -->
-  <script  src="./lopuni.js"></script>
+  <script  src="./reservini.js"></script>
 
 </body>
 </html>
