futuri linkide muutused

--- a/futur/futur.html
+++ b/futur/futur.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>menu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,15 +12,20 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div>
-  <a class="link" href="/followcursor/FollowCursor.html" 
-    data-value="AVALEHELE">AVALEHELE</a>
+<div style="margin: 40px;">
+  <a class="link" href="/reservini/reservini.html" 
+    data-value="RESERVINI">RESERVINI</a>
   <br>
   <a class="link" href="/rulettewheel/rulette.html" 
     data-value="EMPIRE RULETT">EMPIRE RULETT</a>
   <br>
-  <a class="link" href="/reservini/reservini.html" 
-    data-value="RESERVINI">RESERVINI</a>
+  <a class="link" href="pildid.1466.eu" 
+  data-value="GALERII">GALERII</a>
+  <br>
+  <a class="link" href="arhiiv.1466.eu" 
+    data-value="VANA 1466">VANA 1466</a>
+
+  <p>norm pede oled et sa seda lehte telo pealt vaatad.. arvuti pealt on veidike ägedam..</p>
 </div>
 
 <!-- <h1 data-value="" class="videod">VIDEOD</h1>-->
@@ -29,13 +35,12 @@
   <span>Source</span>
 </a> -->
 
-<a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\paevik\paevik.html" target="_blank">
+<!-- <a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\paevik\paevik.html" target="_blank">
   <i class="fa-brands fa-youtube"></i>
   <span>2 min tutorial</span>
-</a>
+</a> -->
 
 
-<!-- partial -->
   <script  src="./futur.js"></script>
 
 </body>
