marta js parandused

--- a/JS funland/marta.html
+++ b/JS funland/marta.html
@@ -13,8 +13,11 @@
 
 <body>
     <!-- T E K S T -->
-    <h1>SUEMA</h1>
-    <p>kaka</p>
+    <center>
+        <br>
+        <h1>SUEMA</h1>
+        <p>kaka</p>
+    </center>
 
     <!-- L I N K -->
     <script scr="marta.js"></script>
