--- a/futur/futur.html
+++ b/futur/futur.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div style="margin: 40px;">
+<div style="margin: 40px; height: 80%;">
   <a class="link" href="/reservini/reservini.html" 
     data-value="RESERVINI">RESERVINI</a>
   <br>
