--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
         <h1>NO TRA</h1>
         <p>Oota siin ära, see lehekülg saab kohe varsti valmis... hoor..</p>
     </div>
+    <br style="height: 30px;">
+    <div class="kast">
+        <h1>ise oled munn ja mongol</h1>
+        <p>tra see et godaddy mulle perse nussib ja ip aadressid ära kustutab on puhtalt sinu süü... </p>
+    </div>
 </body>
 </html>
