--- a/futur/futur.html
+++ b/futur/futur.html
@@ -23,9 +23,11 @@
   data-value="GALERII">GALERII</a>
   <br>
   <a class="link" href="arhiiv.1466.eu" 
-    data-value="VANA 1466">VANA 1466</a>
-
+    data-value="VANA 1466">VANA 1466</a>  
   <p>norm pede oled et sa seda lehte telo pealt vaatad.. arvuti pealt on veidike ägedam..</p>
+  <br>
+  <p>PS! Aron on pede, 
+    Liisa on kattevari</p>
 </div>
 
 <!-- <h1 data-value="" class="videod">VIDEOD</h1>-->
