--- a/futur/futur.html
+++ b/futur/futur.html
@@ -19,10 +19,10 @@
   <a class="link" href="/rulettewheel/rulette.html" 
     data-value="EMPIRE RULETT">EMPIRE RULETT</a>
   <br>
-  <a class="link" href="pildid.1466.eu" 
+  <a class="link" href="http://www.pildid.1466.eu" 
   data-value="GALERII">GALERII</a>
   <br>
-  <a class="link" href="arhiiv.1466.eu" 
+  <a class="link" href="https://arhiiv.1466.eu/main" 
     data-value="VANA 1466">VANA 1466</a>  
   <p>norm pede oled et sa seda lehte telo pealt vaatad.. arvuti pealt on veidike ägedam..</p>
   <br>
