--- a/index.html
+++ b/index.html
@@ -15,5 +15,12 @@
         <h1>ise oled munn ja mongol</h1>
         <p>tra see et godaddy mulle perse nussib ja ip aadressid ära kustutab on puhtalt sinu süü... </p>
     </div>
+    <br style="height: 30px;">
+    <div class="kast">
+        <h1>OKEI OKEI OKEI</h1>
+        <p>See on suht lõpufaasis, kui veab siis järka nädal tulebki update välja... tho ma ei luba midagi</p>
+        <br>
+        <p>Tervita oma ema minuu poolt &#60;3 </p>
+    </div>
 </body>
 </html>
