--- a/futur/futur.html
+++ b/futur/futur.html
@@ -19,7 +19,7 @@
   <a class="link" href="/rulettewheel/rulette.html" 
     data-value="EMPIRE RULETT">EMPIRE RULETT</a>
   <br>
-  <a class="link" href="http://pildid.1466.eu" 
+  <a class="link" href="http://galerii.1466.eu" 
   data-value="GALERII">GALERII</a>
   <br>
   <a class="link" href="https://arhiiv.1466.eu/main" 
