--- a/rulettewheel/rulette.html
+++ b/rulettewheel/rulette.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   
-  <canvas id="canvas" width="500" height="500"></canvas>
+  <canvas id="canvas" width="1000" height="1000" style="transform: translate(50px, 50px)"></canvas>
   
 <!--   <input type="button" value="spin" style="float:left;" 
   id='source-link' 
@@ -20,14 +20,13 @@
     <span>Keeruta</span>
   </a>
 
-  <a id="yt-link" class="meta-link" 
-  href="../futur/futur.html" target="_blank">
+  <a id="yt-link" class="meta-link" href="/futur/futur.html" target="_blank">
     <i class="fa-brands fa-youtube"></i>
     <span>menüü</span>
   </a>
 
 <script>
-var options = ["fresh", "1x soft", "2x soft", "3x soft", "fresh", "1x soft", "2x soft", "3x soft", "fresh", "1x soft", "2x soft", "3x soft"];
+var options = ["fresh", "1x soft", "2x soft", "EI LÜKKA", "fresh", "1x soft", "2x soft", "EI LÜKKA", "fresh", "1x soft", "2x soft", "EI LÜKKA"];
 
 var startAngle = 0;
 var arc = Math.PI / (options.length / 2);
@@ -66,12 +65,13 @@ function getColor(item, maxitem) {
 function drawRouletteWheel() {
   var canvas = document.getElementById("canvas");
   if (canvas.getContext) {
-    var outsideRadius = 200;
-    var textRadius = 160;
-    var insideRadius = 125;
+    var outsideRadius = 300;
+    var textRadius = 240;
+    var insideRadius = 185;
+    
 
     ctx = canvas.getContext("2d");
-    ctx.clearRect(0,0,500,500);
+    ctx.clearRect(0,0,800,800);
 
     ctx.strokeStyle = "black";
     ctx.lineWidth = 2;
@@ -84,10 +84,11 @@ function drawRouletteWheel() {
       ctx.fillStyle = getColor(i, options.length);
 
       ctx.beginPath();
-      ctx.arc(250, 250, outsideRadius, angle, angle + arc, false);
-      ctx.arc(250, 250, insideRadius, angle + arc, angle, true);
+      ctx.arc(400, 400, outsideRadius, angle, angle + arc, false); // Update the center coordinates to (400, 400)
+      ctx.arc(400, 400, insideRadius, angle + arc, angle, true);   // Update the center coordinates to (400, 400)
       ctx.stroke();
       ctx.fill();
+
 
       ctx.save();
       ctx.shadowOffsetX = -1;
@@ -95,8 +96,8 @@ function drawRouletteWheel() {
       ctx.shadowBlur    = 0;
       ctx.shadowColor   = "rgb(220,220,220)";
       ctx.fillStyle = "black";
-      ctx.translate(250 + Math.cos(angle + arc / 2) * textRadius, 
-                    250 + Math.sin(angle + arc / 2) * textRadius);
+      ctx.translate(400 + Math.cos(angle + arc / 2) * textRadius, 
+              400 + Math.sin(angle + arc / 2) * textRadius);
       ctx.rotate(angle + arc / 2 + Math.PI / 2);
       var text = options[i];
       ctx.fillText(text, -ctx.measureText(text).width / 2, 0);
@@ -145,7 +146,7 @@ function stopRotateWheel() {
   ctx.save();
   ctx.font = 'bold 30px Helvetica, Arial';
   var text = options[index]
-  ctx.fillText(text, 250 - ctx.measureText(text).width / 2, 250 + 10);
+  ctx.fillText(text, 250 - ctx.measureText(text).width / 2, 400 + 10);
   ctx.restore();
 }
 
