font size changes

--- a/rulettewheel/rulette.html
+++ b/rulettewheel/rulette.html
@@ -20,8 +20,7 @@
     <span>Keeruta</span>
   </a>
 
-  <a id="yt-link" class="meta-link" href="/futur/futur.html" target="_blank">
-    <i class="fa-brands fa-youtube"></i>
+  <a class="meta-link" href="/futur/futur.html" target="_blank">
     <span>menüü</span>
   </a>
 
