--- a/rulettewheel/rulette.html
+++ b/rulettewheel/rulette.html
@@ -20,7 +20,7 @@
     <span>Keeruta</span>
   </a>
 
-  <a class="meta-link" href="/futur/futur.html" target="_blank">
+  <a class="meta-link" href="index.html" target="_blank">
     <span>menüü</span>
   </a>
 
