kuup6eva muutus

--- a/futur/futur.html
+++ b/futur/futur.html
@@ -35,7 +35,8 @@
   <span>Source</span>
 </a> -->
 
-<!-- <a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\paevik\paevik.html" target="_blank">
+<!-- <a id="yt-link" class="meta-link" 
+  href="C:\Users\Arvuti\Pictures\1466 website\paevik\paevik.html" target="_blank">
   <i class="fa-brands fa-youtube"></i>
   <span>2 min tutorial</span>
 </a> -->
