--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div style="margin: 40px;">
+
+<div style="margin: 40px; text-align: center;">
+  <h1 class="logo">1466</h1>
   <a class="link" href="/reservini/reservini.html" 
     data-value="RESERVINI">RESERVINI</a>
   <br>
