--- a/standbyindex.html
+++ b/standbyindex.html
@@ -7,19 +7,10 @@
 <body>
     <br style="height: 70px;">
     <div class="kast">
-        <h1>NO TRA</h1>
-        <p>Oota siin ära, see lehekülg saab kohe varsti valmis... hoor..</p>
+        <h1>omg ma teen siia enda mõttekirgatused</h1>
+        <p>pmst temakese nimi on ju m&m L, niiet kui ta minuga uut albumit ei kirjuta ss ma...</p>
     </div>
     <br style="height: 30px;">
-    <div class="kast">
-        <h1>ise oled munn ja mongol</h1>
-        <p>tra see et godaddy mulle perse nussib ja ip aadressid ära kustutab on puhtalt sinu süü... </p>
-    </div>
-    <br style="height: 30px;">
-    <div class="kast">
-        <h1>OKEI OKEI OKEI</h1>
-        <p>See on suht lõpufaasis, kui veab siis järka nädal tulebki update välja... tho ma ei luba midagi</p>
-        <br>
         <p>Tervita oma ema minuu poolt &#60;3 </p>
     </div>
 </body>
