--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
   <br>
   <a class="link" href="https://arhiiv.1466.eu/main" 
     data-value="VANA 1466">VANA 1466</a>  
+    
+  <br>
+  <a class="link" href="standbyindex.html" 
+    data-value="HINNOV">HINNOV</a>  
+    
   <p>norm pede oled et sa seda lehte telo pealt vaatad.. arvuti pealt on veidike ägedam..</p>
   <br>
   <p>PS! Aron on pede, 
