--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <!-- partial:index.partial.html -->
 
-<div class="teksti-kastid"; style="margin: 40px; text-align: center;">
+<div class="teksti-kastid"; style=" text-align: center;">
   <h1 class="logo">1466</h1>
   <a class="link" href="/reservini/reservini.html" 
     data-value="RESERVINI">RESERVINI</a>
