--- a/standbyindex.html
+++ b/standbyindex.html
@@ -2,16 +2,13 @@
 <html>
 <head>
     <link rel="stylesheet" href="index.css">
-    <style></style>
+    <style>
+        
+    </style>
 </head>
 <body>
-    <br style="height: 70px;">
-    <div class="kast">
-        <h1>omg ma teen siia enda mõttekirgatused</h1>
-        <p>pmst temakese nimi on ju m&m L, niiet kui ta minuga uut albumit ei kirjuta ss ma...</p>
-    </div>
-    <br style="height: 30px;">
-        <p>Tervita oma ema minuu poolt &#60;3 </p>
+    <div style="text-align: center;"> 
+        <img src="construct.gif" alt="">
     </div>
 </body>
 </html>
