--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   data-value="GALERII">GALERII</a>
   <br>
   <a class="link" href="https://arhiiv.1466.eu/main" 
-    data-value="VANA 1466">VANA 1466</a>  
+    data-value="VANA 1466">LAULUD JM KELBAS</a>  
     
   <br>
   <a class="link" href="standbyindex.html" 
