--- a/index.html
+++ b/index.html
@@ -13,11 +13,8 @@
 <body>
 <!-- partial:index.partial.html -->
 
-<div class="teksti-kastid"; style=" text-align: center;">
-  <h1 class="logo">1466</h1>
-  <a class="link" href="/reservini/reservini.html" 
-    data-value="RESERVINI">RESERVINI</a>
-  <br>
+<div class="teksti-kastid">
+  <h1>1466</h1>
   <a class="link" href="/rulettewheel/rulette.html" 
     data-value="EMPIRE RULETT">EMPIRE RULETT</a>
   <br>
@@ -26,29 +23,19 @@
   <br>
   <a class="link" href="https://arhiiv.1466.eu/main" 
     data-value="VANA 1466">VANA 1466</a>  
-    
   <br>
-  <a class="link" href="standbyindex.html" 
-    data-value="HINNOV">HINNOV</a>  
+  <a class="link" href="http://alomon.eu" 
+    data-value="ALOMON">ALOMON</a>
+  <br>  
+  <a class="link" href="/JS funland/funny.html" 
+    data-value="LAMP">LAMP</a>
+  <br>
     
   <p>norm pede oled et sa seda lehte telo pealt vaatad.. arvuti pealt on veidike ägedam..</p>
   <br>
   <p>PS! Aron on pede, 
     Liisa on kattevari</p>
 </div>
-
-<!-- <h1 data-value="" class="videod">VIDEOD</h1>-->
-
-<!-- <a id="source-link" class="meta-link" href="https://kprverse.com" target="_blank">
-  <i class="fa-solid fa-link"></i>
-  <span>Source</span>
-</a> -->
-
-<!-- <a id="yt-link" class="meta-link" href="C:\Users\Arvuti\Pictures\1466 website\paevik\paevik.html" target="_blank">
-  <i class="fa-brands fa-youtube"></i>
-  <span>2 min tutorial</span>
-</a> -->
-
 
   <script  src="futur/futur.js"></script>
 
