--- a/JS funland/funny.html
+++ b/JS funland/funny.html
@@ -26,8 +26,8 @@ h1 {font-size: 3rem;}
     <!-- T E K S T -->
     <center>
         <br>
-        <h1>SUEMA</h1>
-        <p>kaka</p>
+        <h1>test test</h1>
+        <p>get rekt</p>
     </center>
     <center>
         <div class="grid-container" style="width: 600px;">
