--- a/rulettewheel/rulette.html
+++ b/rulettewheel/rulette.html
@@ -20,12 +20,12 @@
     <span>Keeruta</span>
   </a>
 
-  <a class="meta-link" href="index.html" target="_blank">
+  <a class="meta-link" href="/index.html">
     <span>menüü</span>
   </a>
 
 <script>
-var options = ["fresh", "1x soft", "2x soft", "EI LÜKKA", "fresh", "1x soft", "2x soft", "EI LÜKKA", "fresh", "1x soft", "2x soft", "EI LÜKKA"];
+var options = ["out", "of", "or-", "der", "out", "of", "or-", "der", "out", "of", "or-", "der"];
 
 var startAngle = 0;
 var arc = Math.PI / (options.length / 2);
