--- a/rulettewheel/rulette.html
+++ b/rulettewheel/rulette.html
@@ -2,161 +2,41 @@
 <html>
 <head>
   <title>Roulette Wheel</title>
-  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/rulettewheel/rulette.css">
   <link rel="stylesheet" href="/rulettewheel/rulette.js">
 </head>
 <body>
-  
-  <canvas id="canvas" width="1000" height="1000" style="transform: translate(50px, 50px)"></canvas>
-  
-<!--   <input type="button" value="spin" style="float:left;" 
-  id='source-link' 
-  class="meta-link"/> -->
-  
-  <a id="source-link" 
-  class="meta-link" 
-  target="_blank">
-    <span>Keeruta</span>
-  </a>
 
-  <a class="meta-link" href="/index.html">
-    <span>menüü</span>
-  </a>
+  <div class="grid-container" id="ylemine">
+    <div class="item1"><img src="giphy.webp" style="width: 100%;"></img></div>
+    <div class="item2"><img src="giphy heart.webp" style="width: 100%;"></img></div>
+    <div class="item3">
+      <div>
+        <h1><i>"Kell on kaheksa, <br> Miks ma olen kaine?"</i></h1>
+        <h1 id="text-glow"><i>"Kell on kaheksa, <br> Miks ma olen kaine?"</i></h1>
+      </div>
+    </div>  
+    <div class="item4">
+      <canvas id="canvas" width="560" height="560" class="canvas"></canvas>
+    </div>
 
-<script>
-var options = ["out", "of", "or-", "der", "out", "of", "or-", "der", "out", "of", "or-", "der"];
+  </div>
 
-var startAngle = 0;
-var arc = Math.PI / (options.length / 2);
-var spinTimeout = null;
-
-var spinArcStart = 10;
-var spinTime = 0;
-var spinTimeTotal = 0;
-
-var ctx;
-
-document.getElementById("source-link").addEventListener("click", spin);
-
-function byte2Hex(n) {
-  var nybHexString = "0123456789ABCDEF";
-  return String(nybHexString.substr((n >> 4) & 0x0F,1)) + nybHexString.substr(n & 0x0F,1);
-}
-
-function RGB2Color(r,g,b) {
-	return '#' + byte2Hex(r) + byte2Hex(g) + byte2Hex(b);
-}
-
-function getColor(item, maxitem) {
-  var phase = 0;
-  var center = 128;
-  var width = 127;
-  var frequency = Math.PI*2/maxitem;
-  
-  red   = Math.sin(frequency*item+2+phase) * width + center;
-  green = Math.sin(frequency*item+0+phase) * width + center;
-  blue  = Math.sin(frequency*item+4+phase) * width + center;
-  
-  return RGB2Color(red,green,blue);
-}
-
-function drawRouletteWheel() {
-  var canvas = document.getElementById("canvas");
-  if (canvas.getContext) {
-    var outsideRadius = 300;
-    var textRadius = 240;
-    var insideRadius = 185;
-    
-
-    ctx = canvas.getContext("2d");
-    ctx.clearRect(0,0,800,800);
-
-    ctx.strokeStyle = "black";
-    ctx.lineWidth = 2;
-
-    ctx.font = 'bold 12px Helvetica, Arial';
-
-    for(var i = 0; i < options.length; i++) {
-      var angle = startAngle + i * arc;
-      //ctx.fillStyle = colors[i];
-      ctx.fillStyle = getColor(i, options.length);
-
-      ctx.beginPath();
-      ctx.arc(400, 400, outsideRadius, angle, angle + arc, false); // Update the center coordinates to (400, 400)
-      ctx.arc(400, 400, insideRadius, angle + arc, angle, true);   // Update the center coordinates to (400, 400)
-      ctx.stroke();
-      ctx.fill();
+<center class="grid-container" id="footer">
+  <div class="item5">
+    <a id="spin" id="source-link" style="bottom: 60px;" class="meta-link" target="_blank">
+      <span>Keeruta</span> </a>
+  </div>
+  <div class="item6">
+    <a class="meta-link" href="/index.html">
+      <span>menüü</span> </a>
+  </div>
+</center>
 
 
-      ctx.save();
-      ctx.shadowOffsetX = -1;
-      ctx.shadowOffsetY = -1;
-      ctx.shadowBlur    = 0;
-      ctx.shadowColor   = "rgb(220,220,220)";
-      ctx.fillStyle = "black";
-      ctx.translate(400 + Math.cos(angle + arc / 2) * textRadius, 
-              400 + Math.sin(angle + arc / 2) * textRadius);
-      ctx.rotate(angle + arc / 2 + Math.PI / 2);
-      var text = options[i];
-      ctx.fillText(text, -ctx.measureText(text).width / 2, 0);
-      ctx.restore();
-    } 
 
-    //Arrow
-    ctx.fillStyle = "white";
-    ctx.beginPath();
-    ctx.moveTo(250 - 4, 250 - (outsideRadius + 5));
-    ctx.lineTo(250 + 4, 250 - (outsideRadius + 5));
-    ctx.lineTo(250 + 4, 250 - (outsideRadius - 5));
-    ctx.lineTo(250 + 9, 250 - (outsideRadius - 5));
-    ctx.lineTo(250 + 0, 250 - (outsideRadius - 13));
-    ctx.lineTo(250 - 9, 250 - (outsideRadius - 5));
-    ctx.lineTo(250 - 4, 250 - (outsideRadius - 5));
-    ctx.lineTo(250 - 4, 250 - (outsideRadius + 5));
-    ctx.fill();
-  }
-}
 
-function spin() {
-  spinAngleStart = Math.random() * 10 + 10;
-  spinTime = 0;
-  spinTimeTotal = Math.random() * 3 + 4 * 1000;
-  rotateWheel();
-}
-
-function rotateWheel() {
-  spinTime += 30;
-  if(spinTime >= spinTimeTotal) {
-    stopRotateWheel();
-    return;
-  }
-  var spinAngle = spinAngleStart - easeOut(spinTime, 0, spinAngleStart, spinTimeTotal);
-  startAngle += (spinAngle * Math.PI / 180);
-  drawRouletteWheel();
-  spinTimeout = setTimeout('rotateWheel()', 30);
-}
-
-function stopRotateWheel() {
-  clearTimeout(spinTimeout);
-  var degrees = startAngle * 180 / Math.PI + 90;
-  var arcd = arc * 180 / Math.PI;
-  var index = Math.floor((360 - degrees % 360) / arcd);
-  ctx.save();
-  ctx.font = 'bold 30px Helvetica, Arial';
-  var text = options[index]
-  ctx.fillText(text, 250 - ctx.measureText(text).width / 2, 400 + 10);
-  ctx.restore();
-}
-
-function easeOut(t, b, c, d) {
-  var ts = (t/=d)*t;
-  var tc = ts*t;
-  return b+c*(tc + -3*ts + 3*t);
-}
-
-drawRouletteWheel();
-</script>
+<script  src="./script.js"></script>
 
 </body>
 </html>
