rulette wheelile monster lisatud

--- a/rulettewheel/rulette.html
+++ b/rulettewheel/rulette.html
@@ -27,16 +27,21 @@
     <a id="spin" id="source-link" style="bottom: 60px;" class="meta-link" target="_blank">
       <span>Keeruta</span> </a>
   </div>
+
   <div class="item6">
+    <a id="toggleBtn" class="meta-link">
+      <span>SWICH TO MONSTER</span> </a>
+  </div>
+
+  <div class="item7">
     <a class="meta-link" href="/index.html">
       <span>menüü</span> </a>
-  </div>
+  </div>  
 </center>
-
+<ul id="optionsList" style="display: none;"></ul>
 
 
 
 <script  src="./script.js"></script>
-
 </body>
 </html>
